typo correction in _posts/2018-01-29-SVD.md

--- a/_posts/2018-01-29-SVD.md
+++ b/_posts/2018-01-29-SVD.md
@@ -62,7 +62,7 @@ Then,
 \underset{m\times n}{A}  &= \underset{m \times n,}{U} \underset{n \times n,}{\Sigma} \underset{n \times n}{V^{-1}} = U \Sigma V^T
 \end{align}
 
-Since $U$ is not square, this version of SVD is called reduced SVD. There are
+Since $$U$$ is not square, this version of SVD is called reduced SVD. There are
 also full SVD and truncated SVD, see
 [here](https://math.stackexchange.com/questions/2627005/are-reduced-svd-and-truncated-svd-the-same-thing/2627161#2627161).
 
