added link to images in 2018-05-15-on-p-value.md

--- a/_posts/2018-05-15-on-p-value.md
+++ b/_posts/2018-05-15-on-p-value.md
@@ -281,11 +281,11 @@ effect on the FDR when the $r$ is low and specificity is not high enough (<
 0.999), which is seen from the following plots for $r=0.01$ and different
 specificities.
 
-<img src="/assets/FDR_sensitivity.png" alt="FDR vs sensitivity" />
+<a href="/assets/FDR_sensitivity.png" target="_blank" ><img src="/assets/FDR_sensitivity.png" alt="FDR vs sensitivity" /></a>
 
 The surface of FDR ~ sensitivity & specificity is shown below for different $r$ values.
 
-<img src="/assets/FDR_sensitivity_specificity.png" alt="FDR vs sensitivity and specificity"/>
+<a href="/assets/FDR_sensitivity_specificity.png" target="_blank"><img src="/assets/FDR_sensitivity_specificity.png" alt="FDR vs sensitivity and specificity"/></a>
 
 Note when $r = 0.01$ or low in general, FDR is mostly near 1 until specificity
 becomes extremely high, which explains <a
@@ -299,7 +299,8 @@ href="https://github.com/zyxue/sutton-barto-rl-exercises/blob/master/stats/relat
 target="_blank">here</a>. In it, I also plotted FDR ~ rate & sensitivity for
 different specificities.
 
-<img src="/assets/FDR_rate_sensitivity.png" alt="FDR vs rate and sensitivity" />
+<a href="/assets/FDR_rate_sensitivity.png" target="_blank" ><img src="/assets/FDR_rate_sensitivity.png" alt="FDR vs rate and sensitivity" /></a>
+
 
 Note when the specificity is very high (0.9999 or 0.9999, in other words, p <
 0.0001 or p < 0.001), then the surface is mostly around 0 unless when the rate
