added interactions to confusion table in _posts/2018-05-15-on-p-value.md

--- a/_posts/2018-05-15-on-p-value.md
+++ b/_posts/2018-05-15-on-p-value.md
@@ -12,17 +12,24 @@ text-align: center;
 margin-bottom: 15px;
 }
 
-td.true-positive, td.true-negative, span.green {
-background-color: #99CC99;
+table.confusion-table td:hover {
+cursor: pointer;
 }
 
-td.false-positive, td.false-negative, span.redish {
-background-color: #FFCC00;
+td.true-positive, td.true-negative, td.true-positive-rate, td.true-negative-rate, td.positive-predictive-rate, td.negative-predictive-rate {
+background-color: #C0C0C0;
+}
+
+td.column-margin, td.condition-positive, td.condition-negative, th.row-margin, td.predicted-positive, td.predicted-negative {
+background-color: #F5F5F5;
+}
+
+td.true-positive, td.true-negative, td.false-positive, td.false-negative {
+font-weight: bold;
 }
 
 span.true-positive, span.true-negative, span.false-positive, span.false-negative {
 text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
-font-weight: bold;
 }
 
 span.true-positive {
@@ -49,14 +56,14 @@ white-space: nowrap;
 }
 </style>
 
-**TL;DR:** 
+**TL;DR:**
 
 **Defintion**: P-value is the probability of observing the **current** or **more
 extreme data** conditioned on a **true null hypothesis**. (key words are
 highlighted). Note that it is a conditional probability, and it is NOT only
 about observing the current data, but also more extreme ones.
 
-P-value could be written as 
+P-value could be written as
 
 $$\mathrm{Pr}(X \le x|H_0)$$
 
@@ -126,7 +133,7 @@ $$
 P &= \mathrm{Pr}(X \le x | H_0) \\
   &= \mathrm{Pr}(F^{-1}(P) \le x | H_0) \\
   &= \mathrm{Pr}(P \le F(x)  | H_0) \\
-  &= \mathrm{Pr}(P \le p | H_0) 
+  &= \mathrm{Pr}(P \le p | H_0)
 \end{align*}
 $$
 
@@ -146,44 +153,44 @@ context of a confusion table;thus, it is the frequentist view.
     <th></th>
     <th><span class="nowrap">Condition positive</span> <br> (<span class="marginal">CP</span>, False null hypotheses)</th>
     <th><span class="nowrap">Condition negative</span> <br> (<span class="marginal">CN</span>, True  null hypotheses)</th>
-    <th>Row margin</th>
+    <th class="row-margin">Row margin</th>
     <th colspan="2">Row metrics</th>
   </tr>
   <tr>
     <td><b>Predicted positive (<span class="marginal">PP</span>, rejected hypotheses)</b></td>
     <td class="true-positive">True positive (<span class="true-positive">TP</span>)</td>
     <td class="false-positive">False positive (<span class="false-positive">FP</span>) <br> Type I error</td>
-    <td class="nowrap"><span class="marginal">PP</span> = <span class="true-positive">TP</span> + <span class="false-positive">FP</span></td>
-    <td><span class="nowrap">PPV = <span class="true-positive">TP</span> / <span class="marginal">PP</span></span> <br> Positive predictive rate, <i>Precision</i> </td>
-    <td><span class="nowrap">FDR = <span class="false-positive">FP</span> / <span class="marginal">PP</span></span> <br> <i>False discovery rate</i> </td>
+    <td class="predicted-positive"><span class="marginal">PP</span> = <span class="true-positive">TP</span> + <span class="false-positive">FP</span></td>
+    <td class="positive-predictive-rate"><span class="nowrap">PPV = <span class="true-positive">TP</span> / <span class="marginal">PP</span></span> <br> Positive predictive rate, <i>Precision</i> </td>
+    <td class="false-discovery-rate"><span class="nowrap">FDR = <span class="false-positive">FP</span> / <span class="marginal">PP</span></span> <br> <i>False discovery rate</i> </td>
   </tr>
   <tr>
     <td><b>Predicted negative (<span class="marginal">PN</span>, accepted hypotheses)</b></td>
     <td class="false-negative">False negative (<span class="false-negative">FN</span>) <br> Type II error</td>
     <td class="true-negative">True negative (<span class="true-negative">TN</span>)</td>
-    <td><span class="nowrap"><span class="marginal">PN</span> = <span class="false-negative">FN</span> + <span class="true-negative">TN</span></span></td>
-    <td><span class="nowrap">FOR = <span class="false-negative">FN</span> / <span class="marginal">PN</span></span><br> False omission rate</td>
-    <td><span class="nowrap">NPV = <span class="true-negative">TN</span> / <span class="marginal">PN</span></span><br> Negative predictive rate</td>
+    <td class="predicted-negative"><span class="nowrap"><span class="marginal">PN</span> = <span class="false-negative">FN</span> + <span class="true-negative">TN</span></span></td>
+    <td class="false-omission-rate"><span class="nowrap">FOR = <span class="false-negative">FN</span> / <span class="marginal">PN</span></span><br> False omission rate</td>
+    <td class="negative-predictive-rate"><span class="nowrap">NPV = <span class="true-negative">TN</span> / <span class="marginal">PN</span></span><br> Negative predictive rate</td>
   </tr>
   <tr>
-    <td><strong>Column margin</strong></td>
-    <td><span class="marginal">CP</span> = <span class="true-positive">TP</span> + <span class="false-negative">FN</span></td>
-    <td><span class="marginal">CN</span> = <span class="false-positive">FP</span> + <span class="true-negative">TN</span></td>
+    <td class="column-margin"><strong>Column margin</strong></td>
+    <td class="condition-positive"><span class="marginal">CP</span> = <span class="true-positive">TP</span> + <span class="false-negative">FN</span></td>
+    <td class="condition-negative"><span class="marginal">CN</span> = <span class="false-positive">FP</span> + <span class="true-negative">TN</span></td>
     <td colspan="3" rowspan="3"></td>
     <!-- <td></td> -->
     <!-- <td></td> -->
   </tr>
   <tr>
     <td rowspan="2">Column metrics</td>
-    <td><span class="nowrap">TPR = <span class="true-positive">TP</span> / <span class="marginal">CP</span></span> <br> True positive rate, <i>Sensitivity</i>, <i>Recall</i>, <i>Power</i></td>
-    <td><span class="nowrap">FPR = <span class="false-positive">FP</span> / <span class="marginal">CN</span></span> <br> False positive rate, <i>p-value</i></td>
+    <td class="true-positive-rate"><span class="nowrap">TPR = <span class="true-positive">TP</span> / <span class="marginal">CP</span></span> <br> True positive rate, <i>Sensitivity</i>, <i>Recall</i>, <i>Power</i></td>
+    <td class="false-positive-rate"><span class="nowrap">FPR = <span class="false-positive">FP</span> / <span class="marginal">CN</span></span> <br> False positive rate, <i>p-value</i></td>
     <!-- <td></td> -->
     <!-- <td></td> -->
     <!-- <td></td> -->
   </tr>
   <tr>
-    <td><span class="nowrap">FNR = <span class="false-negative">FN</span> / <span class="marginal">CP</span></span> <br> False negative rate</td>
-    <td><span class="nowrap">TNR = <span class="true-negative">TN</span> / <span class="marginal">CN</span></span> <br> True negative rate, <i>Specificity</i></td>
+    <td class="false-negative-rate"><span class="nowrap">FNR = <span class="false-negative">FN</span> / <span class="marginal">CP</span></span> <br> False negative rate</td>
+    <td class="true-negative-rate"><span class="nowrap">TNR = <span class="true-negative">TN</span> / <span class="marginal">CN</span></span> <br> True negative rate, <i>Specificity</i></td>
     <!-- <td></td> -->
     <!-- <td></td> -->
     <!-- <td></td> -->
@@ -196,17 +203,21 @@ more consistent naming and styling convention applied. For example,
 * All eight metrics are named with three-letter acronyms (TPR, FPR, FNR, TNR, PPV, FDR,
 FOR, NPV). Their full names, as well as alternative names, are listed below
 their respective equations. Relatively more well-known metrics are <i>italicized</i>.
-* All eight input variables to the equations are named with two letters, and
-  they are colored to be more trackable.
+* All input variables to the equations are named with two letters, and they are
+  colored to be more trackable.
   * Marginal sums (<span class="marginal">CP</span>, <span
     class="marginal">CN</span>, <span class="marginal">PP</span>, <span
     class="marginal">PN</span>) are black, while
   * the other four key variables (<span class="true-positive">TP</span>, <span
 class="true-negative">TN</span>, <span class="false-positive">FP</span>, <span
 class="false-negative">FN</span>) are colored differently.
-  * As for background color: <span class="green">green</span> means good (e.g.
-    true positives and true negatives), while <span class="redish">redish</span>
-    means bad (e.g. false positives and false negatives).
+  * As for background color, those with grey background colors are the variables
+    and metrics that the higher, the better. You could see them distributed
+    diagonally.
+  * Row/Column margins are higlighted in light grey.
+  * Hovering a cell of interest will <span style="background-color:
+    yellow">higlight</span> related cells, and you shall see the pattern of
+    which metrics are related to which variables.
 * Aside of <span class="marginal">CP</span>, <span class="marginal">CN</span>,
   <span class="marginal">PP</span>, <span class="marginal">PN</span>, I also add
   their respective description in the context of null hypothesis testing.
@@ -239,7 +250,7 @@ variables. As a result, FDR could be defined as an expectation instead, i.e.
 E(<span class="false-positive">FP</span>/PP) as in the famous <a
 href="https://www.jstor.org/stable/pdf/2346101.pdf?refreqid=excelsior%3Afeea25ba73d9297f8b5983e66f141208"
 target="_black">Benjamini-Hochberg correction method</a>.
- 
+
 Now, we have estabilished the relationship between p-value and specificity, does
 p-value tell us more, for example, sensitivity or false discovery rate (FDR)?
 Since precision and FDR sum to one, knowing one will get us the other, so we'll
@@ -343,7 +354,7 @@ thought this is the main message conveyed in the seemingly absurd paper <a
 href="https://doi.org/10.1371/journal.pmed.0020124" target="_blank">Ioannidis
 JPA (2005) Why Most Published Research Findings Are False. PLoS Med 2(8):
 e124.</a>. But if you understand how such a high FDR is calculated and the
-surface plots shown in this post, you may not feel it so absurd anymore. 
+surface plots shown in this post, you may not feel it so absurd anymore.
 
 To me, the widespread of a generally too generous cutoff of 0.05 appears to be
 an unfortunate accident due to miunderstanding of a p-value. Such generosity
@@ -359,3 +370,51 @@ usually not so extraordinary.
 This post reflects my current understanding of p-value and null hypothesis
 testing, if you see any mistake in the post, please let me know by commenting
 below.
+
+
+<script>
+function higlight(srcSelector, tgtSelector) {
+    // higlight src itself as well
+    tgtSelector = srcSelector + ', ' + tgtSelector;
+
+   $(srcSelector)
+       .mouseenter(function () {
+           $(tgtSelector).each(function() {
+               let elem = $(this);
+               elem.attr('originalBackgroundColor', $(elem).css('background-color'));
+               elem.css('background-color', 'yellow');
+           })
+               })
+       .mouseleave(function() {
+           $(tgtSelector).each(function() {
+               let elem = $(this);
+               elem.css('background-color', elem.attr('originalBackgroundColor'));
+           })
+       });
+};
+
+higlight('td.true-positive-rate', 'td.true-positive, td.condition-positive');
+higlight('td.false-negative-rate', 'td.false-negative, td.condition-positive');
+higlight('td.condition-positive', 'td.true-positive, td.false-negative');
+
+higlight('td.false-positive-rate', 'td.false-positive, td.condition-negative');
+higlight('td.true-negative-rate', 'td.true-negative, td.condition-negative');
+higlight('td.condition-negative', 'td.false-positive, td.true-negative');
+
+higlight('td.positive-predictive-rate', 'td.true-positive, td.predicted-positive');
+higlight('td.false-discovery-rate', 'td.false-positive, td.predicted-positive');
+higlight('td.predicted-positive', 'td.true-positive, td.false-positive');
+
+higlight('td.false-omission-rate', 'td.false-negative, td.predicted-negative');
+higlight('td.negative-predictive-rate', 'td.true-negative, td.predicted-negative');
+higlight('td.predicted-negative', 'td.false-negative, td.true-negative');
+
+
+
+higlight('td.true-positive', 'td.condition-positive, td.true-positive-rate, td.predicted-positive, td.positive-predictive-rate');
+higlight('td.false-negative', 'td.condition-positive, td.false-negative-rate, td.predicted-negative, td.false-omission-rate');
+higlight('td.false-positive', 'td.condition-negative, td.false-positive-rate, td.predicted-positive, td.false-discovery-rate');
+higlight('td.true-negative', 'td.condition-negative, td.true-negative-rate, td.predicted-negative, td.negative-predictive-rate');
+
+
+</script>
