improved highlight color scheme in _posts/2018-05-15-on-p-value.md

--- a/_posts/2018-05-15-on-p-value.md
+++ b/_posts/2018-05-15-on-p-value.md
@@ -215,9 +215,13 @@ class="false-negative">FN</span>) are colored differently.
     and metrics that the higher, the better. You could see them distributed
     diagonally.
   * Row/Column margins are higlighted in light grey.
-  * Hovering a cell of interest will <span style="background-color:
-    yellow">higlight</span> related cells, and you shall see the pattern of
-    which metrics are related to which variables.
+  * Hovering a cell of interest will related cells, and you shall see the
+    pattern of which metrics are related to which variables. <span
+    style="background-color: yellow">Yellow highlight</span> means variables
+    needed to calculate the metric under cursor. <span style="background-color:
+    orange">Orange highlight</span> means metrics that use the variable under
+    cursor.
+
 * Aside of <span class="marginal">CP</span>, <span class="marginal">CN</span>,
   <span class="marginal">PP</span>, <span class="marginal">PN</span>, I also add
   their respective description in the context of null hypothesis testing.
@@ -373,7 +377,7 @@ below.
 
 
 <script>
-function higlight(srcSelector, tgtSelector) {
+function higlight(srcSelector, tgtSelector, color) {
     // higlight src itself as well
     tgtSelector = srcSelector + ', ' + tgtSelector;
 
@@ -382,7 +386,7 @@ function higlight(srcSelector, tgtSelector) {
            $(tgtSelector).each(function() {
                let elem = $(this);
                elem.attr('originalBackgroundColor', $(elem).css('background-color'));
-               elem.css('background-color', 'yellow');
+               elem.css('background-color', color);
            })
                })
        .mouseleave(function() {
@@ -393,28 +397,28 @@ function higlight(srcSelector, tgtSelector) {
        });
 };
 
-higlight('td.true-positive-rate', 'td.true-positive, td.condition-positive');
-higlight('td.false-negative-rate', 'td.false-negative, td.condition-positive');
-higlight('td.condition-positive', 'td.true-positive, td.false-negative');
+higlight('td.true-positive-rate', 'td.true-positive, td.condition-positive', 'yellow');
+higlight('td.false-negative-rate', 'td.false-negative, td.condition-positive', 'yellow');
+higlight('td.condition-positive', 'td.true-positive, td.false-negative', 'yellow');
 
-higlight('td.false-positive-rate', 'td.false-positive, td.condition-negative');
-higlight('td.true-negative-rate', 'td.true-negative, td.condition-negative');
-higlight('td.condition-negative', 'td.false-positive, td.true-negative');
+higlight('td.false-positive-rate', 'td.false-positive, td.condition-negative', 'yellow');
+higlight('td.true-negative-rate', 'td.true-negative, td.condition-negative', 'yellow');
+higlight('td.condition-negative', 'td.false-positive, td.true-negative', 'yellow');
 
-higlight('td.positive-predictive-rate', 'td.true-positive, td.predicted-positive');
-higlight('td.false-discovery-rate', 'td.false-positive, td.predicted-positive');
-higlight('td.predicted-positive', 'td.true-positive, td.false-positive');
+higlight('td.positive-predictive-rate', 'td.true-positive, td.predicted-positive', 'yellow');
+higlight('td.false-discovery-rate', 'td.false-positive, td.predicted-positive', 'yellow');
+higlight('td.predicted-positive', 'td.true-positive, td.false-positive', 'yellow');
 
-higlight('td.false-omission-rate', 'td.false-negative, td.predicted-negative');
-higlight('td.negative-predictive-rate', 'td.true-negative, td.predicted-negative');
-higlight('td.predicted-negative', 'td.false-negative, td.true-negative');
+higlight('td.false-omission-rate', 'td.false-negative, td.predicted-negative', 'yellow');
+higlight('td.negative-predictive-rate', 'td.true-negative, td.predicted-negative', 'yellow');
+higlight('td.predicted-negative', 'td.false-negative, td.true-negative', 'yellow');
 
 
 
-higlight('td.true-positive', 'td.condition-positive, td.true-positive-rate, td.predicted-positive, td.positive-predictive-rate');
-higlight('td.false-negative', 'td.condition-positive, td.false-negative-rate, td.predicted-negative, td.false-omission-rate');
-higlight('td.false-positive', 'td.condition-negative, td.false-positive-rate, td.predicted-positive, td.false-discovery-rate');
-higlight('td.true-negative', 'td.condition-negative, td.true-negative-rate, td.predicted-negative, td.negative-predictive-rate');
+higlight('td.true-positive', 'td.condition-positive, td.true-positive-rate, td.predicted-positive, td.positive-predictive-rate', 'orange');
+higlight('td.false-negative', 'td.condition-positive, td.false-negative-rate, td.predicted-negative, td.false-omission-rate', 'orange');
+higlight('td.false-positive', 'td.condition-negative, td.false-positive-rate, td.predicted-positive, td.false-discovery-rate', 'orange');
+higlight('td.true-negative', 'td.condition-negative, td.true-negative-rate, td.predicted-negative, td.negative-predictive-rate', 'orange');
 
 
 </script>
