--- a/_posts/2018-01-29-SVD.md
+++ b/_posts/2018-01-29-SVD.md
@@ -66,6 +66,10 @@ Since $$U$$ is not square, this version of SVD is called reduced SVD. There are
 also full SVD and truncated SVD, see
 [here](https://math.stackexchange.com/questions/2627005/are-reduced-svd-and-truncated-svd-the-same-thing/2627161#2627161).
 
+Some experiments done on SVD regarding matrices shapes are recorded
+[here](https://github.com/zyxue/sutton-barto-rl-exercises/blob/master/linear_algebra/calculating-SVD-and-shapes-of-the-resulting-matrices.ipynb).
+
+
 # SVD theorem
 
 For any matrix $$A \in C^{m \times n}$$, it has a singular value decomposition.
