added note about potential error in _drafts/2019-01-08-LDA-vs-QDA.md

--- a/_drafts/2019-01-08-LDA-vs-QDA.md
+++ b/_drafts/2019-01-08-LDA-vs-QDA.md
@@ -10,7 +10,8 @@ discriminant analysis, summarizing [@ttnphns's
 answer](https://stats.stackexchange.com/a/71571/112141):
 
 
-* FDA is LDA when considering only two classes, so FDA is a special case of LDA (This could be wrong!!!)
+* FDA is LDA when considering only two classes, so FDA is a special case of LDA
+  (This could be wrong!!! see https://stats.stackexchange.com/a/389023/112141)
 * LDA assumes the covariance matrices of Gaussians of different classes are the
   same, which results in **linear** decision boundary, while QDA doesn't, which
   results in **quadratic** decision boundary, hence their names.
